apps/commafeed/base/commafeed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  namespace: commafeed
  labels:
    app: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          resources:
            limits:
              memory: 256M
          image: athou/commafeed:latest-h2
          ports:
            - containerPort: 8082
