apps/commafeed/base/commafeed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed-clusterip
  namespace: commafeed
  labels:
    app: commafeed
spec:
  type: ClusterIP
  ports:
    - port: 8083
      name: api
      targetPort: 8083
      protocol: TCP
    - port: 8082
      name: web
      targetPort: 8082
      protocol: TCP
  selector:
    app: commafeed
---
apiVersion: v1
kind: Service
metadata:
  name: commafeed-nodeport
  namespace: commafeed
  labels:
    app: commafeed
spec:
  type: NodePort
  ports:
    - port: 8083
      name: api
      targetPort: 8083
      nodePort: 31235
      protocol: TCP
    - port: 8082
      name: web
      targetPort: 8082
      nodePort: 31234
      protocol: TCP
  selector:
    app: commafeed
