apps/commafeed/base/commafeed-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: commafeed-route
  namespace: commafeed
spec:
  hostnames:
  - commafeed.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: commafeed-server
      port: 8082
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
