apps/commafeed/base/commafeed-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingress
  namespace: commafeed
spec:
  rules:
    - host: commafeed.lokal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: commafeed-clusterip
                port:
                  name: http
